--- a/app/src/main/res/drawable/cust_appbar_background.xml
+++ b/app/src/main/res/drawable/cust_appbar_background.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
-    <solid android:color="#B16BBD"/>
-    <corners android:radius="20dp"/>
+    <corners android:radius="16dp"/>
+    <gradient
+        android:startColor="#e0c3fc"
+        android:endColor="#8ec5fc"
+        android:angle="360"/>
+
+<!-- 360   <solid-->
+<!--        android:color="#e0c3fc"/>-->
 
 </shape>
