--- a/app/src/main/res/layout/custom_list_layout.xml
+++ b/app/src/main/res/layout/custom_list_layout.xml
@@ -1,66 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:fitsSystemWindows="true"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginBottom="10dp">
+    >
 
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        app:cardCornerRadius="20dp"
+        android:layout_height="90dp"
+        android:layout_marginBottom="10dp"
+        app:cardBackgroundColor="#DCF8C6"
+        android:layout_marginEnd="10dp"
+        app:cardCornerRadius="16dp"
         app:cardElevation="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        >
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10dp"
-            android:weightSum="9"
-            android:orientation="horizontal">
+            android:layout_height="match_parent">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/image"
-                android:layout_width="0dp"
-                android:layout_weight="3"
-                android:layout_height="60dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/polytechnic" />
-
-            <TextView
-                android:layout_weight="4"
-                android:id="@+id/content"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_marginTop="10dp"
-                android:text="content"
-                android:textStyle="bold" />
             <ImageView
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
                 android:id="@+id/play_button"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:tint="#696969"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="100dp"
+                android:src="@drawable/play_icon" />
+            <SeekBar
+                android:id="@+id/seekbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+               android:layout_marginLeft="120dp"
+                android:layout_marginRight="20dp"
                 android:layout_gravity="center"
-                android:src="@drawable/play_icon"/>
+                />
             <ImageView
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="25dp"
                 android:id="@+id/share_button"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
                 android:layout_gravity="center"
-                android:src="@drawable/share_icon"/>
+                android:tint="#696969"
+                android:layout_marginRight="5dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/share_icon" />
+            <TextView
+                android:id="@+id/content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="100dp"
+                android:layout_marginTop="5dp"
+                android:text="content"
+                android:layout_below="@+id/play_button"
+                android:textColor="#696969"
+                android:textSize="14dp"
+                android:textStyle="italic" />
 
-        </LinearLayout>
+
+        </RelativeLayout>
+
+
+
+
+
+
+
+
+
+
 
     </androidx.cardview.widget.CardView>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
