--- a/app/src/main/res/layout/screen_launcher.xml
+++ b/app/src/main/res/layout/screen_launcher.xml
@@ -1,9 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/polytechnic"
+    android:background="#fff"
     tools:context=".LauncherScreen">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:orientation="vertical">
+        
+        <RelativeLayout
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:id="@+id/layout"
+            android:background="@drawable/round_border">
+            <RelativeLayout
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/icon_fill">
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:tint="#fff"
+                    android:src="@drawable/mic_icon"/>
+            </RelativeLayout>
+        </RelativeLayout>
+
+<!--<ImageView-->
+<!--    android:layout_width="180dp"-->
+<!--    android:layout_height="180dp"-->
+<!--    android:src="@drawable/microphone_thugs"-->
+<!--    android:id="@+id/logo_image"-->
+<!--    />-->
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/logo_image"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/bangers"
+        android:text=" VOICE OF THUGS "
+        android:textColor="#128C7E"
+        android:id="@+id/slogan"
+        android:textSize="30dp"/>
+    </LinearLayout>
+
+
+<!--    <RelativeLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="120dp"-->
+<!--        android:background="@drawable/top_layout"-->
+<!--        android:layout_alignParentRight="true"-->
+<!--        android:layout_alignParentTop="true"-->
+<!--        android:layout_alignParentLeft="true"-->
+<!--        android:id="@+id/headerlayout"-->
+<!--        android:layout_marginRight="80dp"/>-->
+<!--    <RelativeLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="120dp"-->
+<!--        android:layout_alignParentRight="true"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:background="@drawable/bottom_layout"-->
+<!--        android:layout_alignParentLeft="true"-->
+<!--        android:id="@+id/bottomlayout"-->
+<!--        android:layout_marginLeft="80dp"/>-->
+<!--    <RelativeLayout-->
+<!--        android:layout_width="80dp"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_below="@+id/headerlayout"-->
+<!--        android:background="@drawable/side_layout"/>-->
+<!--    <RelativeLayout-->
+<!--        android:layout_width="80dp"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_above="@+id/bottom"-->
+<!--        android:background="@drawable/side_layout"-->
+<!--        android:layout_alignParentRight="true"/>-->
 
 </RelativeLayout>
