--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,35 +5,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/watsapp_wallpaper"
+    android:fitsSystemWindows="true"
     tools:context=".MainActivity">
 
-<!--    android:background="#bdc3c7"-->
+    <!--    android:background="#bdc3c7"-->
 
     <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
         android:id="@+id/appbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:theme="?attr/actionBarTheme">
+
         <androidx.appcompat.widget.Toolbar
-            android:layout_width="match_parent"
             android:id="@+id/toolbar"
-            android:elevation="4dp"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
             android:background="#054D44"
-            app:title="@string/app_name"
-            android:layout_height="?attr/actionBarSize"/>
+            android:elevation="4dp"
+            app:title="@string/app_name" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:layout_height="match_parent"
-        android:id="@+id/recyclerView"
         android:layout_below="@+id/appbar"
-        android:layout_marginTop="2dp"/>
+        android:orientation="horizontal"
+        android:layout_height="wrap_content"
+        android:id="@+id/recyclerview_horizontal"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/recyclerview_horizontal"
+        android:layout_marginTop="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp" />
 
 
 </RelativeLayout>
