--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
 
     <color name="darkGreen">#054D44</color>
+    <color name="dots_color">#fece2f</color>
 </resources>
