--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,8 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/abril_fatface</item>
         <item>@font/aclonica</item>
+        <item>@font/acme</item>
+        <item>@font/aldrich</item>
         <item>@font/amarante</item>
         <item>@font/autour_one</item>
         <item>@font/bangers</item>
